--- a/src/Aardvark.VR.Demo/Aardvark.VR.Demo.fsproj
+++ b/src/Aardvark.VR.Demo/Aardvark.VR.Demo.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="Model.fs" />
     <Compile Include="OpcUtilities.fs" />
     <Compile Include="WIMOpc.fs" />
+    <Compile Include="Teleport.fs" />
     <Compile Include="PlaceLandmark.fs" />
     <Compile Include="NavigationOpc.fs" />
     <Compile Include="App.fs" />
