--- a/src/Aardvark.VR.Demo/Aardvark.VR.Demo.fsproj
+++ b/src/Aardvark.VR.Demo/Aardvark.VR.Demo.fsproj
@@ -21,6 +21,7 @@
     <Compile Include="OpcUtilities.fs" />
     <Compile Include="WIMOpc.fs" />
     <Compile Include="PlaceLandmark.fs" />
+    <Compile Include="DroneControlCenter.fs" />
     <Compile Include="Teleport.fs" />
     <Compile Include="NavigationOpc.fs" />
     <Compile Include="App.fs" />
