new Cyllinder technique - user has to enter the cyllinder - when user is inside the cyllinder, minimap is displayed
- fix semitransparency with cyllinder

--- a/src/Aardvark.VR.Demo/Aardvark.VR.Demo.fsproj
+++ b/src/Aardvark.VR.Demo/Aardvark.VR.Demo.fsproj
@@ -22,6 +22,7 @@
     <Compile Include="WIMOpc.fs" />
     <Compile Include="PlaceLandmark.fs" />
     <Compile Include="DroneControlCenter.fs" />
+    <Compile Include="CyllinderCenter.fs" />
     <Compile Include="Teleport.fs" />
     <Compile Include="NavigationOpc.fs" />
     <Compile Include="App.fs" />
